no longer wraps passage view table texts

--- a/src/groups/RouteNetworkDiagram/PassageView/PassageView.scss
+++ b/src/groups/RouteNetworkDiagram/PassageView/PassageView.scss
@@ -97,9 +97,7 @@
     }
 
     p {
-      white-space: nowrap;
       overflow: hidden;
-      text-overflow: ellipsis;
       padding: 10px;
     }
   }
